--- a/Game_Cultivate/RegisterWindow.xaml
+++ b/Game_Cultivate/RegisterWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Game_Cultivate"
         mc:Ignorable="d"
-        Title="RegisterWindow" Height="300" Width="300">
+        Title="基本信息" Height="300" Width="300">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
