--- a/YOCUKITop/MainWindow.xaml
+++ b/YOCUKITop/MainWindow.xaml
@@ -103,7 +103,20 @@
                 <TextBlock x:Name="tbLogo" Text="Yocuki百宝箱" HorizontalAlignment="Left" FontSize="16" Foreground="White" TextAlignment="Center" Margin="5,5,0,0"/>
             </Grid>
             <Grid Grid.Row="1" Margin="0,10,0,0">
-                <Button Height="80" HorizontalAlignment="Left" Style="{DynamicResource Buttonstyle1}" Margin="10,10,0,0" Name="btntxtread" VerticalAlignment="Top" Width="80" Click="btntxtread_Click">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <Button Grid.Column="0" Grid.Row="0" Height="80" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource Buttonstyle1}" Name="btntxtread"  Width="80" Click="btntxtread_Click">
                     <Button.Content>
                         <Grid>
                             <Grid.RowDefinitions>
@@ -115,7 +128,7 @@
                         </Grid>
                     </Button.Content>
                 </Button>
-                <Button Height="80" HorizontalAlignment="Left" Style="{DynamicResource Buttonstyle1}" Margin="110,10,0,0" Name="btnsudoku" VerticalAlignment="Top" Width="80" Click="btnsudoku_Click">
+                <Button Grid.Column="1" Grid.Row="0" Height="80" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource Buttonstyle1}" Name="btnsudoku"  Width="80" Click="btnsudoku_Click">
                     <Button.Content>
                         <Grid>
                             <Grid.RowDefinitions>
@@ -127,7 +140,7 @@
                         </Grid>
                     </Button.Content>
                 </Button>
-                <Button Height="80" HorizontalAlignment="Left" Style="{DynamicResource Buttonstyle1}" Margin="210,10,0,0" Name="btntetris" VerticalAlignment="Top" Width="80" Click="btntetris_Click">
+                <Button Grid.Column="2" Grid.Row="0" Height="80" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource Buttonstyle1}" Name="btntetris" Width="80" Click="btntetris_Click">
                     <Button.Content>
                         <Grid>
                             <Grid.RowDefinitions>
@@ -135,6 +148,18 @@
                                 <RowDefinition Height="25"/>
                             </Grid.RowDefinitions>
                             <Image Name="imgTetris" Grid.Row="0" Margin="0" Source="/YOCUKITop;component/Image/Tetris.ico"></Image>
+                            <TextBlock Grid.Row="1" Text="俄罗斯方块" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource MainTextBlockStyle}"/>
+                        </Grid>
+                    </Button.Content>
+                </Button>
+                <Button Grid.Column="3" Grid.Row="0" Height="80" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource Buttonstyle1}" Name="btncultivate" Width="80" Click="btncultivate_Click">
+                    <Button.Content>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition Height="25"/>
+                            </Grid.RowDefinitions>
+                            <Image Name="imgCultivate" Grid.Row="0" Margin="0" Source="/YOCUKITop;component/Image/cultivate.png"></Image>
                             <TextBlock Grid.Row="1" Text="俄罗斯方块" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource MainTextBlockStyle}"/>
                         </Grid>
                     </Button.Content>
